# cs_ai

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  app.py  config.py  pyproject.toml  ruff.toml  run.py  run_web.py
alembic/: env.py
alembic/versions/: 13053536ca78_.py  14da7a9ecff2_.py  2477e58084e8_.py  5e17a34bc4d6_.py  6d52a1d7a7cc_add_llm_playground.py  715e87b2f54b_.py  85ae46f57bcf_add_ticket_reply_attempts.py  87397cb2ea37_.py  97ec573d3a8e_.py  9fd13967f3ff_add_admin_users.py  aa560145c29d_.py  b4725cea69cf_.py  b4a2f9c1d8e0_add_ticket_classification_audits.py  b93b449d43d6_.py  c8f14a92d6b1_add_more_service_body_filter_rules.py  f3d2b1a7c9e4_add_ticket_comment_attachments.py
db/: __init__.py  models.py  repository.py  sa.py
deploy/: .env.dev.example  .env.prod.example  Caddyfile  Dockerfile.app  Dockerfile.mcp  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
jobs/: models.py  rabbitmq_queue.py
libs/zendesk_client/: client.py  models.py
logs/: __init__.py  formatters.py  setup.py  telegram.py
scripts/: reclassify_platform_combo_tickets.py
services/: base.py  supervisor.py
src/: app.py  brands.py  config.py  datetime_utils.py
src/ai/: amazon_mcp_client.py  context.py  factory.py  google.py  interfaces.py  reply_generator.py  ticket_classifier.py  tools.py  utils.py
src/db/: __init__.py  models.py  repository.py  sa.py
src/jobs/: models.py  (+1 more)
tests/: __init__.py  conftest.py  test_ai_extract_json.py  test_comment_to_event.py  test_event_key_stable.py  test_followup_should_process.py  test_llm_ticket_classifier_disabled.py  test_merge_ticket_attachments.py  test_poller_skip_initial_followup.py  test_reply_posting.py  test_ticket_classification_service.py  test_ticket_comment_attachment_mapping.py  test_tickets_filter.py
workers/: agent_directive.py  initial_reply.py  ticket_closed.py  user_reply.py
zendesk/: models.py  poller.py  worker.py
zendesk_poller/: models.py  poller.py
(+127 files in other folders)
