[project]
name = "cs"
version = "0.1.0"
description = "AI CS assitant"
requires-python = "==3.13.*"
dependencies = [
    "aio-pika>=9.5.7",
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.0",
    "editorconfig>=0.17.1",
    "httpx>=0.28.1",
    "pydantic[email]>=2.4.1,<2.12",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.30.0",
    "google-genai>=1.50.1",
    "fastmcp>=2.13.1",
    "pre-commit>=4.5.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.2.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "contextvars>=2.4",
    "anyio>=4.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires Docker services from deploy/docker-compose.test.yml and CS_INTEGRATION=1",
]
